[package]
name = "piper"
version = "0.1.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async pipes, channels, mutexes, and more."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stjepang/piper"

[dependencies]
crossbeam-utils = "0.7.0"
futures = { version = "0.3.4", default-features = false, features = ["std"] }

[dev-dependencies]
smol = { git = "https://github.com/stjepang/smol.git" }
